--- a/trunk/rees/.classpath
+++ b/trunk/rees/.classpath
@@ -75,5 +75,6 @@
 	<classpathentry kind="lib" path="WebRoot/WEB-INF/lib/struts2-sunspoter-stream-1.0.jar"/>
 	<classpathentry kind="lib" path="WebRoot/WEB-INF/lib/xmlbeans-2.3.0.jar"/>
 	<classpathentry kind="lib" path="WebRoot/WEB-INF/lib/xwork-core-2.3.1.2.jar" sourcepath="C:/Users/catherine/.m2/repository/org/apache/struts/xwork/xwork-core/2.3.1.2/xwork-core-2.3.1.2-sources.jar"/>
+	<classpathentry kind="lib" path="WebRoot/WEB-INF/lib/quartz-all-1.5.2.jar"/>
 	<classpathentry kind="output" path="WebRoot/WEB-INF/classes"/>
 </classpath>
