--- a/trunk/crm/WebRoot/WEB-INF/web.xml
+++ b/trunk/crm/WebRoot/WEB-INF/web.xml
@@ -5,26 +5,28 @@
 	http://java.sun.com/xml/ns/javaee/web-app_3_0.xsd">
 	<display-name>客户关系管理系统</display-name>
 
-	<!-- 日志配置参数 -->
-	<context-param>
-		<param-name>log4jConfigLocation</param-name>
-		<param-value>classpath:log4j.properties</param-value>
-	</context-param>
-
 	<!-- Spring配置文件参数 -->
 	<context-param>
 		<param-name>contextConfigLocation</param-name>
 		<param-value>/WEB-INF/applicationContext-*.xml,classpath*:applicationContext-*.xml,classpath*:applicationContext*.xml</param-value>
 	</context-param>
 
-	<!-- 日志监听 -->
-	<listener>
-		<listener-class>org.springframework.web.util.Log4jConfigListener</listener-class>
-	</listener>
-
 	<!-- Spring监听 -->
 	<listener>
 		<listener-class>org.springframework.web.context.ContextLoaderListener</listener-class>
+	</listener>
+
+	<!-- 日志监听 -->
+   <context-param>
+		<param-name>log4jConfigLocation</param-name>
+		<param-value>classpath:log4j.properties</param-value>
+	</context-param>
+    <context-param>  
+        <param-name>log4jRefreshInterval</param-name>  
+        <param-value>60000</param-value>  
+    </context-param>  
+	<listener>
+		<listener-class>org.springframework.web.util.Log4jConfigListener</listener-class>
 	</listener>
 
 	<!-- 负责处理由JavaBeans Introspector的使用而引起的缓冲泄露 -->
